fix: 修补动画和hover时的bug,资讯板块待闲时开发

--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -10,7 +10,8 @@ i,em{font-style:normal}
 small{font-size:12px}
 ol,ul,li,dl,dt,dd{list-style:none}
 a{text-decoration:none}
-a:hover{text-decoration:underline}
+/* **hover时取消下划线** */
+a:hover{text-decoration:none}
 legend{color:#000}
 fieldset,img{border:0}
 button,input,select,textarea{font-size:100%}
